# posnet-adapter

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .secrets.baseline  .yamllint.yml  AI-ROADMAP.md  CLAUDE.md  HUMAN-GATES.md  Makefile  README.md  STATUS.md  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json
.github/: CODEOWNERS
.github/workflows/: build.yml  lint.yml  security.yml  test.yml
apps/admin-web/: index.html  package.json  vite.config.ts
apps/admin-web/src/: App.tsx  Channels.tsx  Login.tsx  Products.tsx  Warehouses.tsx  api.ts  index.css  main.tsx
docs/adr/: 0001-stack.md  0002-monorepo.md  0003-secrets.md  0010-cve-exceptions.md  0011-beachhead-rescope.md  0012-integration-hub-reframe.md  0013-eventbus-pgmq-outbox.md  0014-dev-secret-boundary-keycloak-clients.md  0015-tenant-resolution-strategy.md  0016-audit-hardening-before-adapters.md  0017-db-security-posture.md  0018-sync-model-enabler.md  0019-adapter-fetch-listing.md  0020-audit-remediation.md  0021-pos-side-posnet-connector.md  0022-real-posnet-connector-swap.md  _template.md
docs/asyncapi/: posnet-events.yaml
docs/integrations/: posnet-connector-spec.md
docs/runbooks/: _template.md
docs/validation/: g-v-validation-kit.md
infra/caddy/: Caddyfile
infra/grafana/datasources/: datasources.yml
infra/keycloak/: realm-posnet.json
infra/loki/: loki-config.yaml
infra/otel/: otel-collector-config.yaml
infra/postgres/: init.sql
infra/prometheus/: prometheus.yml
libs/adapter/: __init__.py  capabilities.py  circuit_breaker.py  errors.py  hmac_verify.py  protocol.py  rate_limit.py  registry.py
libs/auth/: __init__.py  config.py  jwks.py  principal.py  rbac.py  verifier.py
libs/canonical_model/: __init__.py  base.py  inventory.py  order.py  price.py  product.py
libs/common/: __init__.py  errors.py  money.py  request_id.py  types.py
libs/eventbus/: __init__.py  config.py  consumer.py  event.py  outbox.py  pgmq.py  relay.py
libs/feature_flags/: __init__.py  registry.py
libs/i18n/: __init__.py  locale.py  translator.py
libs/loyalty_client/: __init__.py  client.py  errors.py  idempotency.py  models.py  reconcile.py  vault_loader.py  webhooks.py
libs/observability/: __init__.py  telemetry.py
libs/pos_source/: __init__.py  protocol.py
libs/vault/: __init__.py  client.py
mocks/mock_bazar/: __init__.py  app.py  models.py  store.py
mocks/mock_marketplace/: __init__.py  app.py  models.py  store.py
mocks/mock_posnet/: __init__.py  app.py  models.py  source.py  store.py
scripts/: db_backup.py  reconcile_channel_stock.py  seed_data.py  smoke_loyalty_client.py  smoke_webhook_receiver.py  sync_pos_catalog.py
services/core/: alembic.ini
services/core/alembic/: env.py
services/core/alembic/versions/: 0001_initial_identity.py  0002_rls_policies.py  0003_user_external_subject.py  0004_feature_flags.py  0005_catalog.py  0006_inventory.py  0007_pricing.py  0008_shifts.py  0009_security_posture.py  0010_data_invariants.py  0011_sync_model_enabler.py  0012_channel_orders.py  0013_outbox_seq_ordering.py
services/core/app/: backup.py  config.py  errors.py  eventbus_workers.py  feature_flags.py  i18n.py  idempotency.py  logging_config.py  main.py  rate_limit.py  security.py  telemetry.py
services/core/app/adapters/: __init__.py
services/core/app/api/: deps.py  health.py
services/core/app/domain/: catalog.py  events.py  feature_flags.py  identity.py  inventory.py  onboarding.py  pricing.py  shift.py
services/core/app/middleware/: logging.py  request_id.py  security.py
services/core/app/sync/: __init__.py  canonical.py  channel_config.py  (+7 more)
tests/: conftest.py
tests/contract/: adapter_contract.py
tests/integration/: conftest.py  test_app_health.py  test_auth.py  test_catalog_api.py  test_data_invariants.py  test_e2e_full_loop.py  test_e2e_multichannel.py  test_e2e_mvp.py  test_eventbus.py  test_eventbus_lifespan.py  test_feature_flags_api.py  test_identity_api.py  test_infra.py  test_inventory_api.py  test_migrations.py  test_mock_bazar_adapter.py  test_mock_marketplace.py  test_mock_marketplace_adapter.py  test_onboarding.py  test_order_ingest.py  test_oversell_concurrency.py  test_pos_ingest.py  test_posnet_connector.py  test_pricing_api.py  test_pricing_domain.py  test_publish_channels.py  test_reconcile.py  test_rls.py  test_security_posture.py  test_shifts_api.py  test_sync_change_feed.py  test_sync_dispatcher.py  test_sync_model.py  test_sync_observability.py  test_sync_wiring.py  test_telemetry_app.py  test_tenant_context.py  test_vault.py  test_webhook_ingress.py
tests/unit/: test_harness.py  test_settings.py
tests/unit/adapter/: test_capabilities.py  test_circuit_breaker.py  test_errors.py  test_hmac_verify.py  test_protocol.py  test_rate_limit.py  test_registry.py
tests/unit/app/: conftest.py  test_anti_oversell_properties.py  test_auth_deps.py  test_backup.py  test_canonical_mapper.py  test_catalog_api.py  test_channel_config.py  test_errors.py  test_eventbus_wiring.py  test_feature_flags_api.py  test_i18n_api.py  test_identity_api.py  test_inventory_api.py  test_inventory_transfer.py  test_logging.py  test_pricing_api.py  test_request_id.py  test_security_middleware.py  test_security_wiring.py  test_shifts_api.py  test_telemetry_wiring.py  test_tenants_api.py
tests/unit/auth/: test_config.py  test_principal.py  test_rbac.py
tests/unit/canonical_model/: test_base.py  test_inventory.py  test_order.py  test_price.py  test_product.py
tests/unit/common/: test_errors.py  test_money.py  test_request_id.py
tests/unit/eventbus/: test_config.py  test_event.py  test_pgmq.py
tests/unit/feature_flags/: test_registry.py
tests/unit/i18n/: test_locale.py  test_translator.py
tests/unit/keycloak/: test_realm.py
tests/unit/loyalty_client/: test_auth_recovery.py  test_client.py  test_hmac.py  test_idempotency.py  test_models.py  test_reconcile.py  test_vault_loader.py  test_webhooks.py
tests/unit/observability/: test_telemetry.py
tests/unit/vault/: test_ref.py
(+23 files in other folders)
